# araclean

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  PRD.md  README.md  SECURITY.md  asv.conf.json  cspell.json  docs_gen.py  mkdocs.yml  pyproject.toml  versions.json
.cspell/: project-words.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/concepts/architecture/: index.html
0.2.0/concepts/safety/: index.html
0.2.0/concepts/why-araclean/: index.html
0.2.0/faq/: index.html
0.2.0/getting-started/: index.html
0.2.0/glossary/: index.html
0.2.0/guides/cli/: index.html
0.2.0/guides/composing-pipelines/: index.html
0.2.0/guides/custom-steps/: index.html
0.2.0/guides/dataframes/: index.html
0.2.0/guides/offset-preserving/: index.html
0.2.0/guides/reproducibility/: index.html
0.2.0/guides/stopwords/: index.html
0.2.0/guides/tuning-profiles/: index.html
0.2.0/profiles/: index.html
0.2.0/profiles/classical/: index.html
0.2.0/profiles/light/: index.html
0.2.0/profiles/ml/: index.html
0.2.0/profiles/search/: index.html
0.2.0/profiles/social/: index.html
0.2.0/reference/: index.html
0.2.0/reference/cli/: index.html
0.2.0/search/: search_index.json
0.2.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2.2/concepts/architecture/: index.html
0.2.2/concepts/safety/: index.html
0.2.2/concepts/why-araclean/: index.html
0.2.2/faq/: index.html
0.2.2/getting-started/: index.html
0.2.2/glossary/: index.html
0.2.2/guides/cli/: index.html
0.2.2/guides/composing-pipelines/: index.html
0.2.2/guides/custom-steps/: index.html
0.2.2/guides/dataframes/: index.html
0.2.2/guides/offset-preserving/: index.html
0.2.2/guides/reproducibility/: index.html
0.2.2/guides/stopwords/: index.html
0.2.2/guides/tuning-profiles/: index.html
0.2.2/profiles/: index.html
0.2.2/profiles/classical/: index.html
0.2.2/profiles/light/: index.html
0.2.2/profiles/ml/: index.html
0.2.2/profiles/search/: index.html
0.2.2/profiles/social/: index.html
0.2.2/reference/: index.html
0.2.2/reference/cli/: index.html
0.2.2/search/: search_index.json
benchmarks/: README.md  __init__.py  bench_normalize.py
docs/: faq.md  getting-started.md  glossary.md  index.md  reference.md
docs/adr/: 0001-v1-scope-normalization-core.md  0002-build-new-mit-library.md  0003-three-layer-api-validation-boundary.md  0004-non-destructive-by-default.md  0005-defer-offset-tracking.md  0006-pure-python-translate-engine.md  0007-arabic-primary-terminology.md  0008-commit-driven-versioning-commitizen.md  0009-canonical-equivalent-output.md  0010-preserve-line-structure-by-default.md  0011-cleaning-is-a-third-safety-class.md  0012-offset-preserving-normalization.md
docs/concepts/: architecture.md  safety.md  why-araclean.md
docs/guides/: cli.md  composing-pipelines.md  custom-steps.md  dataframes.md  offset-preserving.md  reproducibility.md  stopwords.md  tuning-profiles.md
docs/includes/: abbreviations.md
docs/profiles/: classical.md  index.md  light.md  ml.md  search.md  social.md
docs/reference/: cli.md
overrides/: main.html
src/araclean/: __init__.py  api.py  chars.py  cli.py  config.py  fusion.py  offsets.py  pandas.py  pipeline.py  polars.py  profiles.py  registry.py  safety.py  steps.py  stopwords.py
tests/: test_alignment.py  test_api.py  test_apply_aligned.py  test_benchmarks_suite.py  test_cli.py  test_config.py  test_cspell_config.py  test_differential_oracles.py  test_docs.py  test_fused_engine.py  test_offset_map.py  test_oracle_benchmarks.py  test_pandas.py  test_pipeline.py  test_polars.py  test_profiles.py  test_smoke.py  test_snapshots.py  test_steps.py  test_stopwords.py
tests/__snapshots__/: test_pipeline.ambr  test_snapshots.ambr
