[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "araclean"
version = "0.1.0"
description = "Arabic text normalization and cleaning — pure-Python, composable, reproducible."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mohamed Martini", email = "mohamedmartini1991@gmail.com" }]
keywords = ["arabic", "nlp", "normalization", "text", "preprocessing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Arabic",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
# Lean core (ADR-0006): pydantic v2 is the only runtime dependency (ADR-0003).
# Any GPL-licensed dependency stays isolated behind an extra to protect the MIT core.
dependencies = ["pydantic>=2"]

[project.urls]
Homepage = "https://github.com/MhdMartini/araclean"
Repository = "https://github.com/MhdMartini/araclean"
Issues = "https://github.com/MhdMartini/araclean/issues"

# The `araclean` command-line entry point (issue 0020). It lives behind the [cli] extra: the
# console script resolves to `araclean.cli:main`, which prints an actionable "install araclean[cli]"
# message instead of an ImportError traceback when Typer is absent, so the lean core never pulls it.
[project.scripts]
araclean = "araclean.cli:main"

# Extras are declared now and populated by later slices; none pull a dependency
# into the core. `all` aggregates them, so it grows automatically as they fill in.
[project.optional-dependencies]
# Typer (a thin layer over click) powers the CLI; it bundles `rich` for help/error formatting.
cli = ["typer>=0.12"]
# pandas powers the `.araclean` Series accessor (issue 0021); kept behind an extra so the lean
# core never imports it (ADR-0003). `import araclean.pandas` registers the accessor and needs this.
pandas = ["pandas>=2"]
polars = []
# `emoji` powers HandleEmoji's `demojize` mode only (keep/strip are pure-Python). Kept behind an
# extra so the lean MIT core never pulls it in (ADR-0003, story 4); it is BSD-licensed, not GPL.
emoji = ["emoji>=2"]
all = ["araclean[cli]", "araclean[pandas]", "araclean[polars]", "araclean[emoji]"]

# Development tooling (PEP 735). `uv sync` installs this group by default.
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pyright>=1.1.380",
    "pytest>=8",
    "hypothesis>=6",
    "syrupy>=4",
    "pre-commit>=3.7",
    "commitizen>=4.16",
    # The optional `emoji` backend, so HandleEmoji's `demojize` mode is exercised in CI.
    "emoji>=2",
    # The [cli] extra's backend, so the CLI (issue 0020) is exercised by the test suite in CI.
    "typer>=0.12",
    # The [pandas] extra's backend + its type stubs, so the pandas accessor (issue 0021) is
    # exercised and type-checked in CI. pandas ships no py.typed; pandas-stubs supplies the types.
    "pandas>=2",
    "pandas-stubs>=2",
    # An independent JSON Schema validator, so tests prove a profile's emitted JSON validates
    # against its emitted JSON Schema (story 40) — the schema is published, not just pydantic-internal.
    "jsonschema>=4",
    "types-jsonschema>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/araclean"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# araclean embeds Arabic letters in comments, docstrings and test data on purpose; a few of them
# look like Latin letters (alef like l, the heh family like o), which ruff's ambiguous-unicode
# rules (RUF001-003) would otherwise flag. Allow exactly those Arabic glyphs so the homoglyph
# check still guards the rest of the codebase. Extend as later steps introduce more Arabic.
# Digits (issue 0008): the Arabic-Indic / Extended zero ٠ ۰ look like ".", the one ١ like "l", and
# the decimal separator ٫ like ",". They are documented in MapDigits/MapPunctuation prose on purpose.
allowed-confusables = ["ا", "ه", "ہ", "ە", "ھ", "٠", "۰", "١", "٫"]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # modernize syntax
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["araclean"]

[tool.ruff.lint.flake8-bugbear]
# Typer's interface *requires* `typer.Option(...)` / `typer.Argument(...)` as parameter defaults
# (it reads them to build the CLI), so B008 (no function calls in defaults) does not apply to them.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

# Commit-driven versioning (ADR-0008). One tool both enforces Conventional
# Commits (the commit-msg hook + CI `cz check`) and derives the SemVer bump from
# them. The version is owned here — never hand-edit `[project].version`; run
# `uv run cz bump` to cut a release.
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"          # bump writes [project].version *and* uv.lock
tag_format = "v$version"
major_version_zero = true        # stay in 0.x until 1.0 is declared deliberately
update_changelog_on_bump = true
changelog_incremental = true
annotated_tag = true
bump_message = "chore(release): $current_version → $new_version"
