[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "araclean"
version = "0.2.2"
description = "Arabic text normalization and cleaning — pure-Python, composable, reproducible, offset-preserving."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mohamed Martini", email = "mohamedmartini1991@gmail.com" }]
keywords = [
    "arabic",
    "nlp",
    "normalization",
    "text",
    "preprocessing",
    "offset-preserving",
    "offset-mapping",
    "alignment",
    "character-offsets",
    "span-preserving",
    "reversible",
    "non-destructive",
    "tashkeel",
    "diacritics",
    "arabic-nlp",
    "tokenization",
    "text-cleaning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Arabic",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
# Lean core (ADR-0006): pydantic v2 is the only runtime dependency (ADR-0003).
# Any GPL-licensed dependency stays isolated behind an extra to protect the MIT core.
dependencies = ["pydantic>=2"]

[project.urls]
Homepage = "https://github.com/MhdMartini/araclean"
Repository = "https://github.com/MhdMartini/araclean"
Issues = "https://github.com/MhdMartini/araclean/issues"
Documentation = "https://mhdmartini.github.io/araclean/"

# The `araclean` command-line entry point. It lives behind the [cli] extra: the
# console script resolves to `araclean.cli:main`, which prints an actionable "install araclean[cli]"
# message instead of an ImportError traceback when Typer is absent, so the lean core never pulls it.
[project.scripts]
araclean = "araclean.cli:main"

# Extras are declared now and populated by later slices; none pull a dependency
# into the core. `all` aggregates them, so it grows automatically as they fill in.
[project.optional-dependencies]
# Typer (a thin layer over click) powers the CLI; it bundles `rich` for help/error formatting.
cli = ["typer>=0.12"]
# pandas powers the `.araclean` Series accessor; kept behind an extra so the lean
# core never imports it (ADR-0003). `import araclean.pandas` registers the accessor and needs this.
pandas = ["pandas>=2"]
# polars powers the `.araclean` Series namespace; kept behind an extra so the lean
# core never imports it (ADR-0003). `import araclean.polars` registers the namespace and needs this.
polars = ["polars>=1"]
# `emoji` powers HandleEmoji's `demojize` mode only (keep/strip are pure-Python). Kept behind an
# extra so the lean MIT core never pulls it in (ADR-0003); it is BSD-licensed, not GPL.
emoji = ["emoji>=2"]
all = ["araclean[cli]", "araclean[pandas]", "araclean[polars]", "araclean[emoji]"]

# Development tooling (PEP 735). `uv sync` installs this group by default.
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pyright>=1.1.380",
    "pytest>=8",
    "hypothesis>=6",
    "syrupy>=4",
    # Micro-benchmarks for the fused str.translate engine (ADR-0006): the fused profile
    # is shown to run in fewer char passes and faster than the unfused composition; the numbers feed
    # the cross-tool benchmark harness.
    "pytest-benchmark>=4",
    "pre-commit>=3.7",
    "commitizen>=4.16",
    # The optional `emoji` backend, so HandleEmoji's `demojize` mode is exercised in CI.
    "emoji>=2",
    # The [cli] extra's backend, so the CLI is exercised by the test suite in CI.
    "typer>=0.12",
    # The [pandas] extra's backend + its type stubs, so the pandas accessor is
    # exercised and type-checked in CI. pandas ships no py.typed; pandas-stubs supplies the types.
    "pandas>=2",
    "pandas-stubs>=2",
    # The [polars] extra's backend, so the polars accessor is exercised and
    # type-checked in CI. polars ships its own py.typed, so no separate stubs are needed.
    "polars>=1",
    # An independent JSON Schema validator, so tests prove a profile's emitted JSON validates
    # against its emitted JSON Schema — the schema is published, not just pydantic-internal.
    "jsonschema>=4",
    "types-jsonschema>=4",
    # pyarabic is a DEV-ONLY DIFFERENTIAL ORACLE (ADR-0002): the cross-tool agreement
    # tests and the throughput comparison import it. It is GPL-3.0, so it must NEVER appear in
    # [project.dependencies] or any [project.optional-dependencies] extra — `pip install araclean`
    # (and `araclean[all]`) pull none of it, keeping the distributed MIT core clean. As a
    # never-distributed test dependency it does not affect araclean's license. It is pure-Python and
    # tiny, so installing it in the CI matrix is cheap. (The heavier oracle, CAMeL Tools, is
    # opt-in-only — it drags in torch + the full GPU runtime stack and downgrades typer — so it is
    # left out of every group; differential tests `pytest.importorskip("camel_tools")` and skip unless a
    # developer installs it explicitly. See benchmarks/README.md.)
    "pyarabic>=0.6",
    # asv (airspeed velocity) runs the benchmarks/ suite as regression-over-time so a future
    # throughput regression is detectable across commits (ADR-0006). Pure-Python and
    # light; `uv run asv check` validates the suite, `uv run asv run` records timings. The
    # snapshot-in-time cross-tool comparison lives in the pytest-benchmark tests instead.
    "asv>=0.6",
]
# The docs site: mkdocs-material + mkdocstrings (Google docstrings). Kept in its OWN
# group, NOT in `dev`, so the default `uv sync` and the test matrix stay lean — these are not needed
# to run the suite. The drift/cross-check/doctest guards in tests/test_docs.py need only `araclean`,
# so they run in the normal gate; only the live `mkdocs build --strict` needs this group, and it
# runs in a dedicated `docs` CI job (the test skips cleanly when mkdocs is absent).
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    # `mike` publishes versioned docs to the `gh-pages` branch: each release
    # tag deploys a pinned X.Y.Z version with a moving `latest` alias, so the docs a reader sees match
    # the araclean version they installed. Only the CI `docs-deploy` job invokes it; a plain
    # `mkdocs build` never needs it (the theme's version selector reads gh-pages' versions.json at
    # runtime, so it adds no build-time requirement and the `docs` strict-build job stays unaffected).
    "mike>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/araclean"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# araclean embeds Arabic letters in comments, docstrings and test data on purpose; a few of them
# look like Latin letters (alef like l, the heh family like o), which ruff's ambiguous-unicode
# rules (RUF001-003) would otherwise flag. Allow exactly those Arabic glyphs so the homoglyph
# check still guards the rest of the codebase. Extend as later steps introduce more Arabic.
# Digits: the Arabic-Indic / Extended zero ٠ ۰ look like ".", the one ١ like "l", and
# the decimal separator ٫ like ",". They are documented in MapDigits/MapPunctuation prose on purpose.
# Quote/typography glyphs (MapQuotes, roadmap Phase 1) and emoji-exclusion prose (roadmap 0.3):
# the single guillemets ‹ ›, the low-9/reversed singles ‚ ‛, the prime ′ and the info source ℹ are
# named deliberately in comments documenting what a table folds or deliberately excludes; the
# Arabic full stop ۔ and Arabic-Indic five ٥ likewise (RemovePunctuation / the stopword policy).
allowed-confusables = [
    "ا", "ه", "ہ", "ە", "ھ", "٠", "۰", "١", "٫",
    "‹", "›", "‚", "‛", "′", "ℹ", "۔", "٥",
]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # modernize syntax
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["araclean"]

[tool.ruff.lint.flake8-bugbear]
# Typer's interface *requires* `typer.Option(...)` / `typer.Argument(...)` as parameter defaults
# (it reads them to build the CLI), so B008 (no function calls in defaults) does not apply to them.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
# `docs_gen.py` (the docs-site generator) lives at the repo root, outside the `src`
# package, because it is build-time tooling that must never ship in the wheel. Putting the root on
# the path lets the docs guard tests `import docs_gen` to cross-check the generated docs against the
# source of truth without packaging it.
pythonpath = ["."]
addopts = "-ra"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    # The pyarabic differential oracle (dev-only) emits SyntaxWarnings from its own
    # source at import time (unescaped regex sequences in an old release). It is a third-party test
    # oracle we do not control, so silence only that to keep our own warning surface meaningful.
    "ignore:invalid escape sequence:SyntaxWarning:pyarabic.araby",
]

# Commit-driven versioning (ADR-0008). One tool both enforces Conventional
# Commits (the commit-msg hook + CI `cz check`) and derives the SemVer bump from
# them. The version is owned here — never hand-edit `[project].version`; run
# `uv run cz bump` to cut a release.
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"          # bump writes [project].version *and* uv.lock
tag_format = "v$version"
major_version_zero = true        # stay in 0.x until 1.0 is declared deliberately
update_changelog_on_bump = true
changelog_incremental = true
annotated_tag = true
bump_message = "chore(release): $current_version → $new_version"
